fix: persistance during detached state
