# src/main/java/app/m/advise/model/Patient.java
@@ -1,10 +1,8 @@
 package app.m.advise.model;
 
-import static jakarta.persistence.CascadeType.ALL;
 
+import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
-import jakarta.persistence.JoinColumn;
-import jakarta.persistence.ManyToOne;
 import jakarta.persistence.PrimaryKeyJoinColumn;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
@@ -26,7 +24,6 @@ import lombok.experimental.SuperBuilder;
 @EqualsAndHashCode(callSuper = false)
 @ToString
 public class Patient extends User {
-  @ManyToOne(cascade = ALL)
-  @JoinColumn(name = "doctor_id")
-  private Doctor doctor;
+  @Column(name = "doctor_id")
+  private String doctorId;
 }
